tests/functional2/lang/builtins.addDrvOutputDependencies/eval-fail-empty-context.err.exp
error:
       … while calling the 'addDrvOutputDependencies' builtin
         at /pwd/in.nix:1:1:
            1| builtins.addDrvOutputDependencies ""
             | ^
            2|

       error: context of string '' must have exactly one element, but has 0
